# ip-final-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  🏠_Home.py
.streamlit/: config.toml
data/: salaries.csv
pages/: 1_📊_Employees_By_Job_Title.py  1_📊_Plot_By_Job_Title.py  2_🌎_Plot_By_Country.py  2_🗺️_Employees_By_Country.py  3_Salary_by_Country.notpy  3_📈_Salary_Distribution.py  3_📊_Distribution_By_Year.py  4_Experience_Level_Distribution.notpy  4_📈_Salary_Distribution.py  5_📊_Salary_Box_Plot.py
sandbox/: clean_data.ipynb  cleaner.py  coding_and_impl.ipynb  coding_and_impl.md  debug.ipynb  debug.py  main.ipynb  plots.ipynb  plots.py  salaries_clean.csv  sql_test.py  untitled.md
utils/: loader.py
