[project]
name = "ip-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "-", email = "-"},
]
dependencies = [
    "numpy>=1.23.4",
    "pandas>=1.5.0",
    "matplotlib>=3.6.1",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "rich>=12.6.0",
    "sqlalchemy>=1.4.42",
    "streamlit>=1.13.0",
    "country-converter>=0.7.7",
    "notebook>=6.5.1",
    "scipy>=1.9.3",
    "PyMySQL[rsa]>=1.0.2",
    "python-dotenv>=0.21.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
